[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/Ship/Ship.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player/Map.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/models/ship.obj" type="ArrayMesh" id=4]
[ext_resource path="res://scenes/Ship/MininingLaser.tscn" type="PackedScene" id=5]
[ext_resource path="res://materials/hyperdrive_effect.tres" type="Material" id=6]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.282353, 0.282353, 0.282353, 1 )
metallic = 0.5
metallic_specular = 0.74
roughness = 0.62

[sub_resource type="CapsuleShape" id=2]
height = 6.15337

[sub_resource type="SphereMesh" id=4]
flip_faces = true
radius = 5.0
height = 10.0

[sub_resource type="BoxShape" id=3]
margin = 0.01
extents = Vector3( 0.1, 0.1, 0.1 )

[node name="Player" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000193119, 0.437286, 1.44001 )
mesh = ExtResource( 4 )
material/0 = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="." index="1"]
transform = Transform( 2.1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.286445, -0.732035 )
shape = SubResource( 2 )

[node name="SpotLight" type="SpotLight" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0244107, 0.0636691, -2.99997 )
light_energy = 0.5
spot_range = 1000.0
spot_attenuation = 9.0
spot_angle = 35.0
spot_angle_attenuation = 0.9

[node name="Camera" type="Camera" parent="." index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.858046, -1.04015 )
keep_aspect = 0
current = true
fov = 90.0
far = 1e+07

[node name="Map" parent="Camera" index="0" instance=ExtResource( 3 )]
visible = false

[node name="HyperdriveOverlay" type="MeshInstance" parent="Camera" index="1"]
visible = false
mesh = SubResource( 4 )
material/0 = ExtResource( 6 )

[node name="Docking" type="Area" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.08047, 2.44897 )
collision_layer = 2
collision_mask = 2

[node name="Bottom" type="CollisionShape" parent="Docking" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.734326, -2.19446 )
shape = SubResource( 3 )

[node name="LeftOmni" type="OmniLight" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.279764, -0.307126, -3.70536 )
light_energy = 2.26
omni_range = 0.5

[node name="RightOmni" type="OmniLight" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.28, -0.307474, -3.7049 )
light_energy = 2.28
omni_range = 0.5

[node name="LeftLaser" parent="." index="7" instance=ExtResource( 5 )]
transform = Transform( 0.999976, 0, -0.00698126, 0, 1, 0, 0.00698126, 0, 0.999976, -0.7, -0.580474, -0.869904 )
visible = false

[node name="RightLaser" parent="." index="8" instance=ExtResource( 5 )]
transform = Transform( 0.999976, 0, 0.00698126, 0, 1, 0, -0.00698126, 0, 0.999976, 0.7, -0.580474, -0.869904 )
visible = false
phase_offset = 0.25
[connection signal="entered_hyperspace" from="." to="." method="_on_Player_entered_hyperspace"]
[connection signal="leaving_hyperspace" from="." to="." method="_on_Player_leaving_hyperspace"]
[connection signal="left_hyperspace" from="." to="." method="_on_Player_left_hyperspace"]
[connection signal="released_mined_resources" from="LeftLaser" to="." method="_on_Laser_released_mined_resources"]
[connection signal="released_mined_resources" from="RightLaser" to="." method="_on_Laser_released_mined_resources"]
